# rca-agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/: Dockerfile  frontend.Dockerfile  frontend.nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  DEVELOPMENT.md  EVALUATION.md  HARDENING.md  INFRA_ACCESS.md  TRACES.md
eval_baselines/: baseline-2026-06-18-post.json  baseline-2026-06-18-skills.json  baseline-2026-06-18.json
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  setupTests.ts  types.ts
infra/clickhouse/: init.sql
infra/mysql/: init.sql
infra/otelcol/: config.yaml
infra/tempo/: tempo.yaml
memory/seed/: domain-error-budget.md  domain-network-latency.md  domain-otel-demo-topology.md  runbook-latency-regression.md  runbook-pod-crashloop.md  sop-rca-workflow.md
rca_agent/: __init__.py  cases.py  cli.py  config.py
rca_agent/agent/: __init__.py  core.py  prompts.py
rca_agent/context/: __init__.py  manager.py
rca_agent/contracts/: __init__.py  _primitives.py  context.py  dataset.py  llm.py  memory.py  provider.py  rca.py  streaming.py  tools.py
rca_agent/eval/: __init__.py  runner.py  scoring.py
rca_agent/llm/: __init__.py  deepseek_client.py
rca_agent/memory/: __init__.py  inmemory_store.py
rca_agent/observability/: __init__.py  metrics.py  tracing.py
rca_agent/providers/: __init__.py  clickhouse_provider.py  clickhouse_schema.sql  loader.py  parquet_provider.py
rca_agent/server/: __init__.py  app.py
scripts/: analyze_eval.py
tests/: conftest.py  test_analyze_eval.py
(+66 files in other folders)
