[project]
name = "rca-agent"
version = "0.1.0"
description = "LLM-core Root Cause Analysis agent with DeepSeek thinking mode, observability data tools, agent memory, and streaming RCA."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RCA Agent Team" }]
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "openai>=1.30,<2",
    "httpx>=0.27",
    # server
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    # data
    "pyarrow>=15",
    "pandas>=2.2,<3",
    "clickhouse-connect>=0.7",
    # persistence
    "sqlalchemy>=2.0,<3",
    "pymysql>=1.1",
    "cryptography>=42",
    # observability
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-requests>=0.45b0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rca_agent"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that make real (billed) DeepSeek API calls or hit live DBs (skipped without RCA_DEEPSEEK_API_KEY / infra)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
